// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Header Critere Action Non Rempli 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Header Critere Preuves Non Rempli 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Header Critere Score Non Atteint 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Header OK 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={false}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Header Remplissage Incomplet 1`] = `
<div
  className="sticky top-0 z-40 bg-bf925 w-full min-h-[112px] flex items-center justify-center fr-mt-4w "
>
  <div
    className="fr-container fr-my-2w"
  >
    <h2
      className="fr-mb-2w"
    >
      Objectif : 
      première
       étoile
    </h2>
    <button
      className="fr-btn self-start"
      disabled={true}
      onClick={[Function]}
    >
      Demander la première étoile
    </button>
  </div>
</div>
`;
